--- a/templates/boomi-deployment/persistentvolumeclaim.jinja
+++ b/templates/boomi-deployment/persistentvolumeclaim.jinja
@@ -12,6 +12,7 @@ resources:
   properties:
     apiVersion: v1
     kind: PersistentVolumeClaim
+    namespace: default
     metadata:
       name: efs-claim
     spec:
