--- a/config.jinja
+++ b/config.jinja
@@ -20,7 +20,7 @@ resources:
     privateSubnetCIDR: {{ privateSubnetCIDR }}
 
 - name: boomi-gke-cluster
-  type: gke-cluster.jinja
+  type: new-gke-cluster.jinja
   properties:
     region: {{ properties["region"] }}
     zone: {{ properties["zone"] }}
