--- a/config.jinja
+++ b/config.jinja
@@ -20,7 +20,7 @@ resources:
     privateSubnetCIDR: {{ privateSubnetCIDR }}
 
 - name: boomi-gke-cluster
-  type: gke-cluster.jinja
+  type: gke.jinja
   properties:
     region: {{ properties["region"] }}
     zone: {{ properties["zone"] }}
@@ -58,17 +58,17 @@ resources:
     network: {{ VPC_NAME }}
     size: 1024
 
-- name: boomi-secret
-  type: secret.jinja
-  metadata:
-    dependsOn:
-      - boomi-gke-cluster
+#- name: boomi-secret
+#  type: secret.jinja
+#  metadata:
+#    dependsOn:
+#      - boomi-gke-cluster
 
-- name: boomi-pvc
-  type: persistentvolumeclaim.jinja
-  metadata:
-    dependsOn:
-      - boomi-gke-cluster
+#- name: boomi-pvc
+#  type: persistentvolumeclaim.jinja
+#  metadata:
+#    dependsOn:
+#      - boomi-gke-cluster
 
 #- name: boomi-bastion
 #  type: bastion.jinja
