--- a/config.jinja
+++ b/config.jinja
@@ -6,6 +6,7 @@
 {% set PRIVATE_SUBNET_NAME = "private" %}
 {% set publicSubnetCIDR = properties["publicSubnetCIDR"] %}
 {% set privateSubnetCIDR = properties["privateSubnetCIDR"] %}
+{% set CLUSTER_NAME = deployment + '-gke-cluster' %}
 
 
 resources:
@@ -57,6 +58,29 @@ resources:
     zone: {{ properties["zone"] }}
     network: {{ VPC_NAME }}
     size: 1024
+
+- name: boomi-cloudbuild
+  type: cloudbuild.jinja
+  properties:
+    build_steps:
+      # Step 1
+      - name: 'gcr.io/cloud-builders/kubectl'
+        args:
+          - cluster-info
+        env:
+          - CLOUDSDK_COMPUTE_REGION={{ REGION }}
+          - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
+          - KUBECONFIG=/workspace/.kube/config
+
+      # Step 2
+      - name: 'gcr.io/cloud-builders/kubectl'
+        args:
+          - apply
+          - --filename=https://raw.githubusercontent.com/ikanski/EKS/master/config/boomi_molecule_eks_service.yaml
+        env:
+          - CLOUDSDK_COMPUTE_REGION={{ REGION }}
+          - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
+          - KUBECONFIG=/workspace/.kube/config
 
 #- name: boomi-secret
 #  type: secret.jinja
