--- a/config.jinja
+++ b/config.jinja
@@ -72,7 +72,7 @@ resources:
           - cluster-info
         env:
           - CLOUDSDK_COMPUTE_REGION={{ REGION }}
-          - CLOUDSDK_CONTAINER_CLUSTER=$(ref.{{ CLUSTER_NAME }}.selfLink)
+          - CLOUDSDK_CONTAINER_CLUSTER=$(ref.{{ CLUSTER_NAME }}.name)
           - KUBECONFIG=/workspace/.kube/config
 
       # Step 2
@@ -82,7 +82,7 @@ resources:
           - --filename=https://raw.githubusercontent.com/ikanski/EKS/master/config/boomi_molecule_eks_service.yaml
         env:
           - CLOUDSDK_COMPUTE_REGION={{ REGION }}
-          - CLOUDSDK_CONTAINER_CLUSTER=$(ref.{{ CLUSTER_NAME }}.selfLink)
+          - CLOUDSDK_CONTAINER_CLUSTER=$(ref.{{ CLUSTER_NAME }}.name)
           - KUBECONFIG=/workspace/.kube/config
   metadata:
     dependsOn:
