--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -1,5 +1,5 @@
 resources:
-- name: cloudbuild
+- name: boomi-cloudbuild
   action: 'gcp-types/cloudbuild-v1:cloudbuild.projects.builds.create'
   properties:
     projectId: {{ env['project'] }}
