enable firewall logging

--- a/templates/network/network.jinja
+++ b/templates/network/network.jinja
@@ -47,6 +47,8 @@ resources:
       ports: [22, 3389]
     targetTags: 
     - allow-ssh-rpd
+    logConfig:
+      enable: true
 
 - name: {{ deployment + '-firewall-allow-http-https' }}
   type: compute.v1.firewall
@@ -57,6 +59,8 @@ resources:
     allowed:
     - IPProtocol: TCP
       ports: [80, 443]
+    logConfig:
+      enable: true
 
 - name: {{ deployment + '-firewall-allow-icmp' }}
   type: compute.v1.firewall
@@ -67,6 +71,8 @@ resources:
     allowed:
     - IPProtocol: ICMP
       ports: []
+    logConfig:
+      enable: true
 
 - name: {{ deployment }}-route
   type: compute.v1.route
