--- a/kubernetes/cloudbuild.jinja
+++ b/kubernetes/cloudbuild.jinja
@@ -16,6 +16,9 @@ resources:
     - name: 'gcr.io/cloud-builders/docker'
       args: ['build', '--tag=gcr.io/$PROJECT_ID/helm:${_HELM_VERSION}', '--tag=gcr.io/$PROJECT_ID/helm:latest', '--build-arg', 'HELM_VERSION=v${_HELM_VERSION}', '.']
       dir: gcp-deployment-manager/kubernetes
+
+    - name: 'gcr.io/$PROJECT_ID/helm:latest'
+      args: ['version', '--client']
       env:
         - SKIP_CLUSTER_CONFIG=true
 
