--- a/config.jinja
+++ b/config.jinja
@@ -71,7 +71,7 @@ resources:
     dependsOn:
     - boomi-gke-cluster
 
-- name: boomi-cloudbuild
+{#- name: boomi-cloudbuild
   type: cloudbuild.jinja
   properties:
     region: {{ REGION }}
@@ -85,7 +85,7 @@ resources:
     - boomi-gke-cluster
     - file-store
 
-{#    build_steps:
+    build_steps:
       # Step 1
       - name: 'gcr.io/cloud-builders/kubectl'
         args:
