--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -32,7 +32,7 @@ resources:
         - --namespace
         - default
         - --set
-        - secrets.username=vilvamani007@gmail.com,secrets.password={{ region }},secrets.account=google.com,volume.server=10.0.0.8
+        - secrets.username=properties["username"],secrets.password=properties["password"],secrets.account=properties["account"],volume.server=properties["ipaddress"]
         - '.'
       dir: gcp-deployment-manager/kubernetes/helm
       env:
