Update server config

--- a/templates/cloud-storage/file-store.jinja
+++ b/templates/cloud-storage/file-store.jinja
@@ -28,4 +28,7 @@ resources:
 
 outputs:
 - name: fileShareIp
-  value: $(ref.{{ deployment + '-filestore' }}.networks[0].ipAddresses)
+  value: $(ref.{{ deployment + '-filestore' }}.networks[0].ipAddresses[0])
+
+- name: reservedIpRange
+  value: $(ref.{{ deployment + '-filestore' }}.networks[0].reservedIpRange)
