--- a/config.jinja
+++ b/config.jinja
@@ -80,7 +80,7 @@ resources:
     username: vilvamani007@gmail.com
     password: abcde
     account: google.com
-    ipaddress: $(ref.{{ deployment + '-filestore' }}.networks[0].ipAddresses)
+    ipaddress: $(ref.file-store.fileShareIp)
 {#  metadata:
     dependsOn:
     - boomi-gke-cluster
