--- a/templates/kubernetes/gke-cluster.jinja
+++ b/templates/kubernetes/gke-cluster.jinja
@@ -137,3 +137,6 @@ resources:
     - enable-gke-api
     - enable-gkeconnect-api
 
+outputs:
+- name: gkeClusterName
+  value: $(ref.{{ CLUSTER_NAME }}.name)
