added service folder

--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -28,7 +28,7 @@ resources:
       args: 
         - upgrade
         - --install
-        - secret
+        - boomimolecule
         - --namespace
         - default
         - --set
