--- a/config.jinja
+++ b/config.jinja
@@ -81,6 +81,10 @@ resources:
     password: abcde
     account: google.com
     ipaddress: $(ref.file-store.fileShareIp)
+  metadata:
+    dependsOn:
+    - boomi-gke-cluster
+    - file-store
 
 {#
 - name: boomi-bastion
