--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -32,7 +32,7 @@ resources:
         - --namespace
         - default
         - --set
-        - secrets.username={{ properties["username"] }},secrets.password={{ properties["password"] }},secrets.account={{ properties["account"] }},volume.server={{ properties["ipaddress"] }}
+        - secrets.username={{ properties["username"] }},secrets.password={{ properties["password"] }},secrets.account={{ properties["account"] }},volume.server={{ properties["ipaddress"] }}, storage.reserved-ipv4-cidr={{ properties["reserved-ipv4-cidr"] }}, storage.network={{ properties["network"] }}
         - '.'
       dir: gcp-deployment-manager/kubernetes/helm
       env:
