--- a/config.jinja
+++ b/config.jinja
@@ -80,9 +80,9 @@ resources:
     CLUSTER_NAME: $(ref.boomi-gke-cluster.gkeClusterName)
     ipaddress: $(ref.file-store.fileShareIp)
     reservedIpRange: $(ref.file-store.reservedIpRange)
-    username: vilvamani007@gmail.com
-    password: abcde
-    account: google.com
+    username: {{ properties["BoomiUsername"] }}
+    password: {{ properties["BoomiPassword"] }}
+    account: {{ properties["BoomiAccount"] }}
   metadata:
     dependsOn:
     - boomi-gke-cluster
