--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -24,21 +24,45 @@ resources:
       dir: gcp-deployment-manager/kubernetes
       waitFor: [git_clone]
 
+    - id: helm_repo_update
+      name: 'gcr.io/$PROJECT_ID/helm:latest'
+      args: 
+        - repo
+        - add
+        - stable
+        - https://kubernetes-charts.storage.googleapis.com
+      env:
+        - CLOUDSDK_COMPUTE_REGION={{ region }}
+        - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
+        - KUBECONFIG=/workspace/.kube/config
+        - HELM_REPO_URL=https://kubernetes-charts.storage.googleapis.com
+      waitFor: [build_image]
+
+    - id: helm_list
+      name: 'gcr.io/$PROJECT_ID/helm:latest'
+      args: 
+        - repo
+        - list
+      env:
+        - CLOUDSDK_COMPUTE_REGION={{ region }}
+        - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
+        - KUBECONFIG=/workspace/.kube/config
+      waitFor: [helm_repo_update]
+
     - id: helm_nfs_deployment
       name: 'gcr.io/$PROJECT_ID/helm:latest'
       args: 
         - install
         - --set
-        - nfs.server={{ properties["ipaddress"] }},nfs.path=/boomifileshare
-        - nfs-client-provisioner
+        - nfs.server={{ properties["ipaddress"] }},nfs.path=/boomifileshare,storageClass.defaultClass=true,storageClass.reclaimPolicy=Retain,storageClass.accessModes=ReadWriteMany
         - stable/nfs-client-provisioner
+        - --generate-name
       env:
         - CLOUDSDK_COMPUTE_REGION={{ region }}
         - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
         - KUBECONFIG=/workspace/.kube/config
         - HELM_REPO_NAME=stable/nfs-client-provisioner
-        - HELM_REPO_URL=https://kubernetes-charts.storage.googleapis.com
-      waitFor: [build_image]
+      waitFor: [helm_list]
 
     - id: helm_boomi_deployment
       name: 'gcr.io/$PROJECT_ID/helm:latest'
