--- a/templates/bastion-instance/bastion.jinja
+++ b/templates/bastion-instance/bastion.jinja
@@ -9,7 +9,7 @@ resources:
     zone: {{ properties["zone"] }}
     properties:
       serviceAccounts:
-      - email: default
+      - email: 557141724904-compute@developer.gserviceaccount.com
         scopes:
         - https://www.googleapis.com/auth/compute
         - https://www.googleapis.com/auth/logging.write
@@ -44,10 +44,25 @@ resources:
         - key: startup-script
           value: |
             #!/bin/bash
+            #### Log the execution to a file ####
+            exec 3>&1 4>&2
+            trap 'exec 2>&4 1>&3' 0 1 2 3 RETURN
+            exec 1>/var/log/configure-bastion.log 2>&1
+
+            set -x
+            whoami
+
             curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
             chmod +x ./kubectl
             sudo mv ./kubectl /usr/local/bin/kubectl
             kubectl version --client
+
+            export HOME=/`whoami`
+            export KUBECONFIG=$HOME/.kube/config
+            
+            gcloud container clusters get-credentials {{ properties["CLUSTER_NAME"] }} --region={{ properties["region"] }}
+            kubectl apply -f https://raw.githubusercontent.com/ikanski/EKS/master/config/boomi_molecule_eks_service.yaml
+
 
 - name: {{ deployment }}-igm
   type: compute.v1.regionInstanceGroupManager
@@ -58,3 +73,16 @@ resources:
     targetSize: {{ properties["targetSize"] }}
     baseInstanceName: {{ bastionVM }}
     instanceTemplate: $(ref.{{ deployment }}-it.selfLink)
+
+- name: {{ deployment }}-as
+  type: compute.v1.regionAutoscaler
+  properties:
+    region: {{ properties["region"] }}
+    target: $(ref.{{ deployment }}-igm.selfLink)
+    autoscalingPolicy:
+      maxNumReplicas: 2
+      minNumReplicas: 1
+      cpuUtilization:
+        utilizationTarget: 0.8
+      coolDownPeriodSec: 90
+
