--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -83,5 +83,17 @@ resources:
         - KUBECONFIG=/workspace/.kube/config
       waitFor: [helm_nfs_deployment]
 
+    - id: kubectl_hpa_deployment
+      name: 'gcr.io/cloud-builders/kubectl'
+      args: 
+        - apply
+        - --filename=
+        - --validate=false
+      env:
+        - CLOUDSDK_COMPUTE_REGION={{ region }}
+        - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
+        - KUBECONFIG=/workspace/.kube/config
+      waitFor: [helm_boomi_deployment]
+
     substitutions:
       _HELM_VERSION: 3.2.0
